--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
+    <link rel="stylesheet" href="estilos.css">
     
 </head>
 <body>
+    <div class="titulo">
     <h1>CALCULADORA DE MASA CORPORAL</h1>
+    </div>
     <form action="">
         <label for="txtPeso">Peso:</label>
         <input type="text" id="txtPeso" placeholder="Escribe en Kg.">
